# pgstacrs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pgstacrs.pyi  pyproject.toml  versions.json
.github/workflows/: CI.yml  ci.yml  docs.yml  pypi.yml
docs/: api.md
scripts/: format  lint  test
src/: lib.rs
tests/: conftest.py  migrate.py  test_collection.py  test_external.py  test_item.py  test_search.py  test_version.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/api/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.1/api/: index.html
v0.1.1/search/: search_index.json
