[package]
name = "pgstacrs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pgstacrs"
crate-type = ["cdylib"]

[dependencies]
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
geojson = "0.24.1"
pgstac = { version = "0.2.2", git = "https://github.com/stac-utils/stac-rs", features = [
    "tls",
] }
pyo3 = "0.23.2"
pyo3-async-runtimes = { version = "0.23.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-log = "0.12.0"
pythonize = "0.23.0"
serde_json = "1.0.133"
stac-api = { version = "0.6.2", features = [
    "python",
], git = "https://github.com/stac-utils/stac-rs" }
stac = { version = "0.11.0", git = "https://github.com/stac-utils/stac-rs" }
thiserror = "2.0.4"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
