[package]
name = "pgstacrs"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
name = "pgstacrs"
crate-type = ["cdylib"]

[dependencies]
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
geojson = "0.24.1"
pgstac = { version = "0.2.2", git = "https://github.com/stac-utils/stac-rs" }
pyo3 = "0.23.2"
pyo3-async-runtimes = { version = "0.23.0", features = [
    "tokio",
    "tokio-runtime",
] }
pyo3-log = "0.12.1"
pythonize = "0.23.0"
serde_json = "1.0.134"
stac-api = { version = "0.7.0", features = [
    "python",
], git = "https://github.com/stac-utils/stac-rs" }
stac = { version = "0.11.0", git = "https://github.com/stac-utils/stac-rs" }
thiserror = "2.0.9"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
