[project]
name = "pgstacrs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "pytest-postgresql>=6.1.1",
    "pypgstac>=0.9.1",
    "psycopg[pool]>=3.2.3",
    "mkdocs-material[imaging]>=9.5.46",
    "mkdocstrings[python]>=0.26.1",
    "ruff>=0.8.0",
    "maturin>=1.7.4",
    "mkdocs-jupyter>=0.24.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore:the default for the ConnectionPool:DeprecationWarning",
]
markers = ["external: requires an external database via docker compose"]

[tool.uv]
# https://github.com/PyO3/maturin/issues/2314#issuecomment-2488542771
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/*.rs" },
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
